--- a/package.json
+++ b/package.json
@@ -8,16 +8,28 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.5",
+    "prisma": "^4.4.0",
     "ts-node-dev": "^2.0.0",
+    "typegraphql-prisma": "^0.21.5",
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
+    "@types/graphql-fields": "^1.3.4",
+    "apollo-server": "^3.10.3",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.19.0",
     "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.4.0",
+    "type-graphql": "^1.1.1",
+    "uuid": "^9.0.0"
   }
 }
