--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "<caio_cgf@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
     "@types/node": "^18.8.5",
-    "prisma": "^4.4.0",
+    "prisma": "^4.3.0",
     "ts-node-dev": "^2.0.0",
     "typegraphql-prisma": "^0.21.5",
     "typescript": "^4.8.4"
@@ -19,11 +20,13 @@
   "dependencies": {
     "@prisma/client": "^4.4.0",
     "@types/graphql-fields": "^1.3.4",
+    "@types/uuid": "^8.3.4",
     "apollo-server": "^3.10.3",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "graphql": "^16.6.0",
+    "graphql": "^15.3.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.19.0",
     "pg": "^8.8.0",
