--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.8.5",
+    "@types/supertest": "^2.0.12",
+    "jest": "27.5.1",
     "prisma": "^4.3.0",
+    "sqlite3": "^5.1.2",
+    "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typegraphql-prisma": "^0.21.5",
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^4.4.0",
