--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    links:
+      - redis
     volumes:
       - .:/app
 
@@ -35,6 +37,11 @@ services:
       start_period: 5s
     volumes:
       - postgres_hosteando:/var/lib/postgresql/data
+
+  redis:
+    image: redis
+    expose:
+      - 6379
 
 volumes:
   postgres_hosteando:
