--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       retries: 5
       start_period: 5s
     volumes:
-      - postgres_hosteando:/var/lib/postgresql/data
+      - postgres_rides:/var/lib/postgresql/data
 
   redis:
     image: redis
@@ -44,5 +44,5 @@ services:
       - 6379
 
 volumes:
-  postgres_hosteando:
+  postgres_rides:
     driver: local
